<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<Button 
	android:text="@string/viewButton" 
	android:id="@+id/viewButton" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal">
	</Button>
<Button 
	android:text="@string/createButton" 
	android:id="@+id/createButton" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal">
	</Button>
<Button 
	android:text="@string/updateButton" 
	android:id="@+id/updateButton" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal">
	</Button>
<Button 
	android:text="@string/deleteButton" 
	android:id="@+id/deleteButton" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal">
	</Button>
</LinearLayout>
